--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -38,3 +38,26 @@
   margin-bottom: 0;
   line-height: 1.25;
 }
+
+.category {
+  color: #663399;
+  font-size: 12px;
+  font-weight: bold;
+  padding-right: 10px;
+  text-transform: uppercase;
+}
+
+.search-box {
+  width: 25%;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+
+.search-box:focus {
+  outline: none;
+  border-color: #8954a8;
+  box-shadow: 0 0 5px rgba(137, 84, 168, 0.5);
+}
